--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - name: Install 
+      - name: Install Oniguruma
         run: |
           sudo apt install wget
           wget https://github.com/kkos/oniguruma/releases/download/v5.9.6/onig-5.9.6.tar.gz
@@ -29,3 +29,16 @@ jobs:
           ./configure
           make
           sudo make install
+      - name: Install Mosh 0.2.8 RC
+        run: |
+          wget https://github.com/higepon/mosh/releases/download/mosh-0.2.8-rc3/mosh-0.2.8-rc3.tar.gz
+          tar zvxf mosh-0.2.8-rc3.tar.gz
+          cd mosh-0.2.8-rc3
+          ./configure
+          make
+          make test
+          sudo make install
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}          
+
